Add: S3 Service to hydrate the image url to presigned get url before responding
