# src/routes/workspace/workspace.routes.ts
@@ -5,21 +5,26 @@ import * as workspaceController from './workspace.controller';
 
 const router = Router();
 
-router.get('/', authenticate, workspaceController.listWorkspaces);
+// Create workspace
 router.post('/', authenticate, workspaceController.createWorkspaceController);
 
-router.get('/:workspaceId', authenticate, workspaceGuard(), workspaceController.getWorkspaceById);
+// List user workspaces - userId as query parameter
+router.get('/user', authenticate, workspaceController.listWorkspaces);
+
+// Get specific workspace
+router.get('/:workspaceId', authenticate, workspaceController.getWorkspaceById);
+
 router.put(
-  '/:workspaceId',
-  authenticate,
-  workspaceGuard({ roles: ['OWNER', 'ADMIN'] }),
-  workspaceController.updateWorkspace
+    '/:workspaceId',
+    authenticate,
+    // workspaceGuard({ roles: ['OWNER', 'ADMIN'] }),
+    workspaceController.updateWorkspace
 );
 router.patch(
-  '/:workspaceId',
-  authenticate,
-  workspaceGuard({ roles: ['OWNER', 'ADMIN'] }),
-  workspaceController.patchWorkspace
+    '/:workspaceId',
+    authenticate,
+    // workspaceGuard({ roles: ['OWNER', 'ADMIN'] }),
+    workspaceController.patchWorkspace
 );
 
 export default router;
